[package]
name = "huby"
version = "0.1.2"
edition = "2021"
rust-version = "1.61.0"
description = "A simple crate (supporting serde) to handle byte sizes as human"
keywords = ["human", "bytes", "size", "units", "serde"]
readme = "README.md"
repository = "https://github.com/qjerome/human-bytes"
license = "GPL-3.0"


[features]
default = ["std"]
std = ["thiserror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0.61", optional = true }
serde = { version = "1.0.204", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
